<resources>
    <string name="app_name">VideoApp</string>

    <string name="user_id">HKU ID</string>
    <string name="user_password">PIN</string>
    <string name="login">Login</string>

    <string name="action_settings">Settings</string>
    <string name="position">Position</string>
    <string name="list">List</string>
    <string name="customize">Customize</string>
    <string name="open_activities">Open activities</string>
    <string name="fillgap">Fill gap</string>
    <string name="manual_fast_scroll">Faster manual scroll</string>
    <string name="auto_fast_scroll">Faster auto scroll</string>
    <string name="dividers">Dividers</string>
    <string name="black">Black</string>
    <string name="transparency">Transparency</string>
    <string name="empty">Empty</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="reset">Reset</string>

    <!--about activity -->
    <string name="about">About</string>
    <string name="user_name">Name</string>
    <string name="user_icon">Icon</string>
    <string name="user_slogn">Slogn</string>
    <string name="user_gender">Gender</string>
    <string name="user_switch">IsAutoUpdate</string>
    <string name="user_slogn_text"> Chim Tat Wing is soooooo Cute!!! I love  Chim Tat Wing !!!</string>
    <string name="user_gender_text"> Male / Female </string>
    <string name="user_name_text"> HKU </string>
    <string name="cancel"> Cancel </string>
    <string name="save"> Save </string>

    <!--welcome -->
    <string name="welcome">Welcome</string>
    <string name="welcome_gallery">Gallery</string>
    <string name="welcome_video">Video</string>
</resources>

