<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/loginbackground"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:gravity="center_horizontal|bottom"
        android:text="@string/user_id"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:gravity="center_horizontal|top"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:gravity="center_horizontal|bottom"
        android:text="@string/user_password"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:gravity="center_horizontal|top"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:gravity="center_horizontal|top"
        android:text="@string/login"
        android:textColor="@color/white" />


</LinearLayout>